Added User to Keycloak server
- realm role is not getting mapped.

--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,12 @@
             <groupId>org.keycloak</groupId>
             <artifactId>keycloak-spring-boot-starter</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.keycloak</groupId>
+            <artifactId>keycloak-admin-client</artifactId>
+            <version>18.0.0</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.projectlombok</groupId>
